--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/Chat/index.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/Chat/index.css
@@ -11,13 +11,13 @@
 	border-bottom: 1px solid #ccc;
 	height: 800px;
 	position: absolute;
-	top:65px;
+	top:50px;
 	z-index: -1;
 	overflow-y: scroll;
 }
 
 .chat-thread{
-	margin:0 20px;
+	margin:0 2%;
 }
 .chat-thread li{
 	position: relative;
@@ -25,8 +25,8 @@
 }
 
 .headicon{
-	width: 70px;
-    height: 70px;
+	width: 15%;
+    height: 15%;
     border-radius: 50%;
     margin-top: 20px;
 }
@@ -85,17 +85,17 @@
 	float: left;
 }
 .chat-thread li.left .chat_box{
-	margin-left: 80px;
+	margin-left: 18%;
 }
 .chat-thread li.left .inform{
 	width: 100%;
 	text-align: left;
 }
 
-.chat-thread li.left .chat_t{
-	background: #fff;
-	float: left;
-	margin-right: 80px;
+.chat-thread li.left .chat_t {
+    background: #fff;
+    float: left;
+    margin-right: 8%;
 }
 .chat-thread li.left .chat_t:before{
 	position: absolute;
@@ -111,8 +111,8 @@
 	float: right;
 }
 
-.chat-thread li.right .chat_box{
-	margin-right: 80px;
+.chat-thread li.right .chat_box {
+    margin-right: 19%;
 }
 .chat-thread li.right .inform{
 	width: 100%;
@@ -122,7 +122,7 @@
 	background: #f13131;
 	color: #fff;
 	float: right;
-	margin-left: 80px;
+	margin-left: 8%;
 }
 .chat-thread li.right .chat_t:before{
 	position: absolute;
@@ -165,13 +165,14 @@
     background: #fff;
     padding-left: 10px;
     margin-left: 84px;
-    margin-right: 20px;
+    margin-right: 53px;
     border: 1px solid #ccc;
 }
-.reply{
-	height: 23px;
-	line-height: 23px;
-	background: #fff;
+.reply {
+    height: 23px;
+    line-height: 23px;
+    background: #fff;
+    width: 100%;
 }
 .ent{
 	height: 25px;
