--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -8186,6 +8186,8 @@ footer {
 
 .emoji_icon {
     display: inline-block !important;
+    width: 26.66667px;
+    height: 26.66667px;
 }
 /*** 精彩评论 结束 **/
 
