--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Comment/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Comment/Index.cshtml
@@ -27,7 +27,7 @@
 <body style="overflow: hidden">
 
     <header class="hjc_header">
-        <a href="javascript:;" class="hjc_back"></a>
+        <a href="javascript:history.go(-1);" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">发表评论</a>
         <a href="javascript:publish();" class="SX_A">发表</a>
     </header>
