--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/CommentList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/CommentList.cshtml
@@ -112,7 +112,7 @@
             </a>
             <a href="javascript:showShare();" class="ftTB_A ShareBtn"><img src="/images/62_2.png"></a>
         </div>
-        <a href="javascript:;" class="Gues_ftFBPL">请输入您的评论</a>
+        <a href="/Comment/Index/@ViewBag.ArticleId?ctype=1&type=@ViewBag.Type" class="Gues_ftFBPL">请输入您的评论</a>
     </div>
 
 
