--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
@@ -56,7 +56,7 @@
                                     <span>@comment.StarCount</span>
                                 }
                             </a>
-                            <a href="/Comment/Index/@ViewBag.ArticleId?ctype=2&type=@ViewBag.Type" class="comp_HF"><img src="/images/46_3.png"></a>
+                            <a href="/Comment/Index/@comment.Id?ctype=2&type=@ViewBag.Type" class="comp_HF"><img src="/images/46_3.png"></a>
                         </div>
                     </li>
                 }
