--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Notice.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Notice.cshtml
@@ -24,7 +24,7 @@
 <body style="background:#F4F4F5;">
 
     <header class="hjc_header">
-        <a href="javascript:;" class="hjc_back"></a>
+        <a href="javascript:history.go(-1);" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">消息提醒</a>
     </header>
 
