修改新闻详情页上一篇下一篇，修改图库浏览页，添加六彩链接

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -1041,12 +1041,13 @@
 
 
 
-    <footer class="hjc_footer">
+    <footer class="hjc_footer" style="margin-top: -5px; background: #eee;">
         <div class="hjc_ftNav">
-            <span>触屏版</span>|<a href="javascript:;">电脑版</a>
+            <p>深圳市球讯网络科技有限公司</p>
+            <p>版权所有 粤ICP备14066812号-1</p>
+            <p>本站仅提供国家彩票开奖信息查询，不提供任何彩票销售业务。</p>
+            <p>万彩吧提醒您：理性购彩，热心公益。未满18周岁的未成年人禁止购彩及兑奖！</p>
         </div>
-        <div class="hjc_ftphone">永久域名：m.1369p.com</div>
-        <p class="hjc_ftcopy">© 2016 皇家直播1369p.me 版权所有</p>
     </footer>
 </body>
 </html>
