--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
@@ -192,13 +192,13 @@
                 </a>
             </li>
             <li>
-                <a href="javascript:;">
+                <a href="/News/Index/5/123">
                     <i><img src="/images/icon_info_02.png"></i>
                     <p>挂牌</p>
                 </a>
             </li>
             <li>
-                <a href="javascript:;">
+                <a href="/News/Index/5/124">
                     <i><img src="/images/icon_info_03.png"></i>
                     <p>跑狗</p>
                 </a>
@@ -216,10 +216,10 @@
     <div class="info_LHC_category col4">
         <dl>
             <dt><p><span class="spec"></span>香港正版图库</p></dt>
-            <dd><a href="javascript:;">看圆解码</a></dd>
-            <dd><a href="javascript:;">幸运图彩</a></dd>
-            <dd><a href="javascript:;">精彩选图</a></dd>
-            <dd><a href="javascript:;">香港图库</a></dd>
+            <dd><a href="/News/Index/5/111">看图解码</a></dd>
+            <dd><a href="/News/Index/5/112">幸运彩图</a></dd>
+            <dd><a href="/News/Index/5/113">精彩选图</a></dd>
+            <dd><a href="/News/Index/5/114">香港图库</a></dd>
         </dl>
         <div class="clearfix"></div>
     </div>
