--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
@@ -16,7 +16,7 @@
 
 <header class="hjc_header">
 
-    <a href="/Home/Index" class="hjc_back"></a>
+    <a href="/Home/Index" class="hjc_back hjc_home"></a>
     <a href="javascript:;" class="hjc_logo">个人中心</a>
     <a href="/Personal/Set" class="hjc_Set"></a>
 </header>
