--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Task.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Task.cshtml
@@ -19,7 +19,7 @@
     <header class="hjc_header">
         <a href="/Personal/Index" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">赚钱任务</a>
-        <a href="javascript:;" class="SX_A">规则</a>
+        <a href="/Personal/TaskRule" class="SX_A">规则</a>
     </header>
     
     <div class="Make_header">
