--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
@@ -24,6 +24,7 @@
     <script src="~/js/luo/jquery.emoji.min.js"></script>
     <script type="text/javascript" src="~/js/yjp.js"></script>
 
+    <script type="text/javascript" src="~/js/luo/hammer.min.js"></script>
     <script type="text/javascript" src="~/js/luo/picmax.js"></script>
 </head>
 
