--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -8098,7 +8098,13 @@ footer {
 
 /*** 个人中心 开始****/
 .hjc_home {
-    background-image: url(../images/02.png);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50px;
+    height: 50px;
+    background: url(../images/02.png) no-repeat center;
+    background-size: 50%;
 }
 
 /***参与竞猜**/
