--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
@@ -106,7 +106,7 @@
                 </a>
             </li>
             <li>
-                <a href="javascript:;">
+                <a href="/Personal/TransactionRecord">
                     <div class="Per_listtu f-l"><img src="~/images/39_2.png"></div>
                     <div class="Per_listRight">
                         <h3>交易记录</h3>
