--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Plan.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Plan.cshtml
@@ -1,4 +1,5 @@
-﻿@using C8.Lottery.Public
+﻿@using C8.Lottery.Model
+@using C8.Lottery.Public
 @{
     Layout = null;
 }
@@ -33,13 +34,12 @@
             <div class="hdNav_cai_collect">
                 <div class="hdNav_cai_lhs_expand"><img src="/images/icon-expand.png"></div>
                 <ul class="hdNav_cai_lhs">
-                    <li class="current"><a href="javascript:;">热门</a></li>
-                    <li><a href="javascript:;">快三</a></li>
-                    <li><a href="javascript:;">11选5</a></li>
-                    <li><a href="javascript:;">时时彩</a></li>
-                    <li><a href="javascript:;">赛车</a></li>
-                    <li><a href="javascript:;">快乐十分</a></li>
-                    <li><a href="javascript:;">其他</a></li>
+                    
+                    @foreach (LotteryType2 lotteryType in ViewBag.list)
+                    {
+                        <li><a href="javascript:;">@lotteryType.Name</a></li>
+                    }
+
                     <div style="clear:bothl;"></div>
                 </ul>
             </div>
@@ -49,32 +49,33 @@
                     <span class="collect"><img src="/images/icon-collect.png"  alt=""/></span>
                 </div>
                 <ul class="hdNav_cai">
-                    <li class="current"><a href="javascript:;">热门</a></li>
-                    <li><a href="javascript:;">快三</a></li>
-                    <li><a href="javascript:;">11选5</a></li>
-                    <li><a href="javascript:;">时时彩</a></li>
-                    <li><a href="javascript:;">赛车</a></li>
-                    <li><a href="javascript:;">快乐十分</a></li>
-                    <li><a href="javascript:;">其他</a></li>
-                    <div style="clear:bothl;"></div>
+
+                    @foreach (LotteryType2 lotteryType in ViewBag.list)
+                    {
+                         <li><a href="javascript:;">@lotteryType.Name</a></li>
+                    }
+
+                 
+                    <div style="clear:both;"></div>
                 </ul>
             </div>
         </div>
 
 
         <div class="hjc_indexmain" style="margin-top:90px;">
+            
+            
+            @foreach (LotteryType2 lotteryType in ViewBag.list)
+            {
 
-            @*热门*@
-            <ul class="list_mainUl2" style="display: block;">
+                int[] lTypeArr = lotteryType.SonIdArr;
                 
-                    @{
-                        int[] remen = {1, 3, 5, 9, 18, 47, 52, 63, 64};
-                        
-                    }
+                @*热门*@
+                <ul class="list_mainUl2">
 
-                    @for (int i = 0; i < remen.Length; i++)
+                    @for (int i = 0; i < lTypeArr.Length; i++)
                     {
-                        int j = remen[i];
+                        int j = lTypeArr[i];
                         string logo = Util.GetLotteryIcon(j) + ".png";
                     
                         <li>
@@ -88,190 +89,23 @@
                                 </a>
                             </div>
                         </li>
-                }
+                    }
 
-
-
-            </ul>
+                </ul>
+            }
             
-            
-             @*快三*@
-            <ul class="list_mainUl2">
-                
-                
-                @for (int i = 38; i < 51; i++)
-                {
-                    string logo = Util.GetLotteryIcon(i) + ".png";
-                    
-                    <li>
-                        <div class="UL2_hd">
-                            <a href="/Plan/Index/@i">
-                                <div class="UL2_hdtu f-l"><img src="/images/@logo"></div>
-                                <div class="UL2_hdtit">
-                                    <h3>@Util.GetLotteryTypeName(i)</h3>
-                                </div>
-                                <span class="UL2_hdicon"></span>
-                            </a>
-                        </div>
-                    </li>
-                    
-                }
-
-
-
-            </ul>
-            
-            
-            @*11选5*@
-            <ul class="list_mainUl2">
-                
-                
-                @for (int i = 15; i < 38; i++)
-                {
-                    string logo = Util.GetLotteryIcon(i) + ".png";
-                    
-                    <li>
-                        <div class="UL2_hd">
-                            <a href="/Plan/Index/@i">
-                                <div class="UL2_hdtu f-l"><img src="/images/@logo"></div>
-                                <div class="UL2_hdtit">
-                                    <h3>@Util.GetLotteryTypeName(i)</h3>
-                                </div>
-                                <span class="UL2_hdicon"></span>
-                            </a>
-                        </div>
-                    </li>
-                    
-                }
-
-
-
-            </ul>
-            
-            @*时时彩*@
-            <ul class="list_mainUl2">
-                
-                
-                @for (int i = 9; i < 15; i++)
-                {
-                    string logo = Util.GetLotteryIcon(i) + ".png";
-                    
-                    <li>
-                        <div class="UL2_hd">
-                            <a href="/Plan/Index/@i">
-                                <div class="UL2_hdtu f-l"><img src="/images/@logo"></div>
-                                <div class="UL2_hdtit">
-                                    <h3>@Util.GetLotteryTypeName(i)</h3>
-                                </div>
-                                <span class="UL2_hdicon"></span>
-                            </a>
-                        </div>
-                    </li>
-                    
-                }
-
-
-
-            </ul>
-            
-             @*赛车飞艇*@
-            <ul class="list_mainUl2">
-                
-                
-                @for (int i = 63; i < 66; i++)
-                {
-                    string logo = Util.GetLotteryIcon(i) + ".png";
-                    
-                    <li>
-                        <div class="UL2_hd">
-                            <a href="/Plan/Index/@i">
-                                <div class="UL2_hdtu f-l"><img src="/images/@logo"></div>
-                                <div class="UL2_hdtit">
-                                    <h3>@Util.GetLotteryTypeName(i)</h3>
-                                </div>
-                                <span class="UL2_hdicon"></span>
-                            </a>
-                        </div>
-                    </li>
-                    
-                }
-
-
-
-            </ul>
 
             
-            @*快乐十分*@
-            <ul class="list_mainUl2">
-                
-                
-                @for (int i = 51; i < 60; i++)
-                {
-                    string logo = Util.GetLotteryIcon(i) + ".png";
-                    
-                    <li>
-                        <div class="UL2_hd">
-                            <a href="/Plan/Index/@i">
-                                <div class="UL2_hdtu f-l"><img src="/images/@logo"></div>
-                                <div class="UL2_hdtit">
-                                    <h3>@Util.GetLotteryTypeName(i)</h3>
-                                </div>
-                                <span class="UL2_hdicon"></span>
-                            </a>
-                        </div>
-                    </li>
-                    
-                }
+            <script>
+                $(function () {
+                    $('.hdNav_cai_lhs li').eq(0).addClass('current');
+                    $('.hdNav_cai li').eq(0).addClass('current');
+                    $('.list_mainUl2').eq(0).show();
+                });
 
-
-
-            </ul>
+            </script>
             
-            @*其他*@
-            <ul class="list_mainUl2">
-                
-                
-                @for (int i = 1; i < 9; i++)
-                {
-                    string logo = Util.GetLotteryIcon(i) + ".png";
-                    
-                    <li>
-                        <div class="UL2_hd">
-                            <a href="/Plan/Index/@i">
-                                <div class="UL2_hdtu f-l"><img src="/images/@logo"></div>
-                                <div class="UL2_hdtit">
-                                    <h3>@Util.GetLotteryTypeName(i)</h3>
-                                </div>
-                                <span class="UL2_hdicon"></span>
-                            </a>
-                        </div>
-                    </li>
-                    
-                }
-                
-                
-                
-                @for (int i = 60; i < 63; i++)
-                {
-                    string logo = Util.GetLotteryIcon(i) + ".png";
-                    
-                    <li>
-                        <div class="UL2_hd">
-                            <a href="/Plan/Index/@i">
-                                <div class="UL2_hdtu f-l"><img src="/images/@logo"></div>
-                                <div class="UL2_hdtit">
-                                    <h3>@Util.GetLotteryTypeName(i)</h3>
-                                </div>
-                                <span class="UL2_hdicon"></span>
-                            </a>
-                        </div>
-                    </li>
-                    
-                }
-
-
-
-            </ul>
+           
         </div>
         <div class="mask" style="display:none;"></div>
 
