调整开奖记录跳转

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
@@ -186,7 +186,7 @@
     <div class="info_LHC_nav">
         <ul class="hdNav_ul">
             <li>
-                <a href="/Home/Open/@currentLotteryTypeId">
+                <a href="/Record/OpenRecord/?lType=@currentLotteryTypeId">
                     <i><img src="/images/icon_info_01.png"></i>
                     <p>开奖</p>
                 </a>
