--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -122,7 +122,7 @@
     }
     <div class="Plan_content top50">
         <div class="Plan_CInfo">
-            <div class="CZ_hdtit">
+            <div class="CZ_hdtit" onclick="location.href='/Record/OpenRecord/?lType=@currentLotteryTypeId'">
                 <dl class="CZ_hdMain">
                     <dt><a href="javascript:;"><img src="~/images/@ViewBag.Icon"></a></dt>
                     <dd>
